# nfl-mock-draft

./: .env  CLAUDE.md  NFL-MOCK-DRAFT-CONTEXT-ENGINEERING-PROMPT.md  PLANNING.md  README.md  TASK.md  pyproject.toml  server.py  start.sh
app/: __init__.py  data_loader.py  models_core.py  routes.py
app/analytics/: __init__.py  draft_engine.py  player_pool.py  position_value.py  simulator.py  team_context.py
app/api/: predictions.py  scrape.py
app/models/: __init__.py  scrape.py
app/pipeline/: draft_order_sync.py  runner.py  storage.py  trade_detector.py
app/scrapers/: base.py  college_stats.py  draft_countdown.py  espn.py  espn_mock.py  news.py  nfl_com.py  nfl_mock.py  sharp.py  social.py  tankathon.py  twitter_nitter.py
data/: draft.db  picks.json  players.json  teams.json
data/config/: college_logo_map.json  known_trades.json  position_value.json  team_name_map.json  team_needs_2026.json  twitter_accounts.json
data/processed/: combine_stats.json  draft_picks.json  media_articles.json  mock_draft.json  prospects.json
data/raw/draft_countdown/: 20260306T031736Z.html
data/raw/espn/: 20260305T032336Z.html  20260305T032451Z.html  20260305T033720Z.html  (+2 more)
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_data_loader.py  test_models.py  test_routes.py
tests/analytics/: test_draft_engine.py  test_player_pool.py  test_simulator.py
tests/pipeline/: test_draft_order_sync.py  test_runner.py  test_trade_detector.py
tests/scrapers/: test_draft_countdown.py  test_espn.py  test_tankathon.py  test_twitter_nitter.py
(+23 files in other folders)
